# SBCBinaryFormat

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/SBCBinaryFormat/: Utilities.hpp
cpp/test/: CMakeLists.txt
cpp/test/source/: basic_test.cpp
python/: README.md  pyproject.toml  sbcbinaryformat.py  setup.py
python/examples/: reader_example.py  writer_example.py
python/sbcbinaryformat/: __init__.py  streamer.py  tarstreamer.py  utilities.py  writer.py
sbc-viewer/: README.md  pyproject.toml  sbc_viewer.py
